--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "require": {
         "php": "^8.1"
     },
+    "require-dev": {
+        "larapack/dd": "^1.1"
+    },
     "autoload": {
         "psr-4": {
             "Core\\": "src/Core/"
